--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    
+
     <link rel="stylesheet" type="text/css" href="index.css">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
@@ -18,7 +18,7 @@
     <!--Import materialize.css-->
 
     <!-- Import Google Icon Font -->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Import materialize.css -->
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css" media="screen,projection"/>
 
