--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css" media="screen,projection"/>
 
     <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, width=280px"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
