--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+
+    <title>OverOrUnder</title>
   </head>
   <body>
 
